--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <p>Welcome to the chat app</p>
+    <ol id="messages">
+        
+    </ol>
+    <form action="" id="message-form">
+        <input type="text" name="message" placeholder="Message" />
+        <button type="submit">Send</button>
+    </form>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/index.js"></script>
 </body>
