--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,13 @@
 <body>
     <p>Welcome to the chat app</p>
     <ol id="messages">
-        
+
     </ol>
     <form action="" id="message-form">
         <input type="text" name="message" placeholder="Message" />
         <button type="submit">Send</button>
     </form>
+    <button id="send-location">Send Location</button>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/index.js"></script>
 </body>
