--- a/public/index.html
+++ b/public/index.html
@@ -28,5 +28,6 @@
 
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/index.js"></script>
+        <script src="js/libs//moment.js"></script>
     </body>
 </html>
