scroll to bottom with animation when required

--- a/public/index.html
+++ b/public/index.html
@@ -54,5 +54,6 @@
         <script src="/js/index.js"></script>
         <script src="js/libs/moment.js"></script>
         <script src="js/libs/mustache.js"></script>
+        <script src="js/libs/animateScroll.js"></script>
     </body>
 </html>
