add joined user list

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     </head>
     <body class="centered-form">
         <div class="centered-form__form">
-            <form action="/chat.html">
+            <form action="/chat.html" id="join-form">
                 <div class="form-field">
                     <h3>Join a Chat</h3>
                 </div>
@@ -26,5 +26,7 @@
                 </div>
             </form>
         </div>
+
+        <script src="js/index.js"></script>
     </body>
 </html>
