--- a/public/chat.html
+++ b/public/chat.html
@@ -21,7 +21,6 @@
                     <input type="text" name="message" placeholder="Message" autofocus autocomplete="off"/>
                     <button type="submit">Send</button>
                 </form>
-
                 <button id="send-location">Send Location</button>
             </div>
         </div>
@@ -55,5 +54,6 @@
         <script src="js/libs/moment.js"></script>
         <script src="js/libs/mustache.js"></script>
         <script src="js/libs/animateScroll.js"></script>
+        <script src="js/libs/deparam.js"></script>
     </body>
 </html>
