show active rooms

--- a/public/chat.html
+++ b/public/chat.html
@@ -9,6 +9,8 @@
     </head>
     <body class="chat">
         <div class="chat__sidebar">
+            <h3 id="room-name">My Room</h3>
+            <br>
             <h3>People</h3>
             <div id="users"></div>
         </div>
@@ -54,6 +56,6 @@
         <script src="js/libs/moment.js"></script>
         <script src="js/libs/mustache.js"></script>
         <script src="js/libs/animateScroll.js"></script>
-        <script src="js/libs/deparam.js"></script>
+        <script src="js/libs/helper.js"></script>
     </body>
 </html>
