--- a/public/index.html
+++ b/public/index.html
@@ -5,28 +5,36 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <link rel="stylesheet" href="css/styles.css" />
-        <title>Chat | Chat App</title>
+        <title>Join | Chat App</title>
     </head>
     <body class="centered-form">
         <div class="centered-form__form">
             <form action="/chat.html" id="join-form">
-                <div class="form-field">
-                    <h3>Join a Chat</h3>
-                </div>
+                <div class="form-field"><h3>NodeChat | Join</h3></div>
                 <div class="form-field">
                     <label>Display Name</label>
                     <input type="text" name="name" autofocus />
                 </div>
                 <div class="form-field">
-                    <label>Room Name</label>
-                    <input type="text" name="room" />
+                    <label>Room Name</label> <input type="text" name="room" />
+                </div>
+                <div class="form-field">
+                    <label>Active Rooms <span class="active-count">(0)</span></label>
+                    <select name="active-rooms" id="active-rooms-selection">
+                        <option value="volvo">Volvo</option>
+                        <option value="saab">Saab</option>
+                        <option value="fiat">Fiat</option>
+                        <option value="audi">Audi</option>
+                    </select>
                 </div>
                 <div class="form-field">
                     <button type="submit">Join</button>
                 </div>
             </form>
+            <p style='text-align: center'>Developed by Sadman Muhib Samyo</p>
         </div>
 
+        <script src="/socket.io/socket.io.js"></script>
         <script src="js/index.js"></script>
     </body>
 </html>
