--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,10 @@
                 <div class="form-field"><h3>NodeChat | Join</h3></div>
                 <div class="form-field">
                     <label>Display Name</label>
-                    <input type="text" name="name" autofocus />
+                    <input type="text" name="name" autofocus placeholder="Name to show others"/>
                 </div>
                 <div class="form-field">
-                    <label>Room Name</label> <input type="text" name="room" />
+                    <label>Room Name</label> <input type="text" name="room" placeholder="Join or Create a new room" />
                 </div>
                 <div class="form-field">
                     <label>Active Rooms <span class="active-count">(0)</span></label>
@@ -28,7 +28,7 @@
                     <button type="submit">Join</button>
                 </div>
             </form>
-            <p style='text-align: center'>Developed by Sadman Muhib Samyo</p>
+            <p style='text-align: center; margin-bottom: 10px'>Developed by Sadman Muhib Samyo</p>
         </div>
 
         <script src="/socket.io/socket.io.js"></script>
