--- a/public/chat.html
+++ b/public/chat.html
@@ -5,14 +5,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Join | Chat App</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="/css/styles.css" />
     </head>
     <body class="chat">
         <div class="chat__sidebar">
-            <h3 id="room-name">My Room</h3>
-            <br>
-            <h3>People</h3>
-            <div id="users"></div>
+            <div style="display: flex; flex-direction: row">
+                <h3 id="hamburger_menu"><span class="fa fa-bars"></span></h3>
+                <h3 id="room-name">My Room</h3>
+            </div>
+            
+            <div class="people_list">
+                <br>
+                <h3>People</h3>
+                <div id="users"></div>
+            </div>
         </div>
 
         <div class="chat__main">
